configuring testing-from-IDE & code completion etc

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -9,6 +9,10 @@ services:
             - ./ruby/root_home/.bash_history:/root/.bash_history
             - ../lib/:/usr/src/ruby-in-docker/lib/
             - ../spec/:/usr/src/ruby-in-docker/spec/
+            - ../workspace.code-workspace:/usr/src/ruby-in-docker/workspace.code-workspace
+            - ../Gemfile:/usr/src/ruby-in-docker/Gemfile
+            - ../Gemfile.lock:/usr/src/ruby-in-docker/Gemfile.lock
+            - ../.vscode/:/usr/src/ruby-in-docker/.vscode/
         stdin_open: true
         tty: true
         networks:
