--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,22 +1,9 @@
-version: '2'
-
 services:
     ruby:
         build:
-            context: ..
-            dockerfile: ./docker/ruby/Dockerfile
+            context: ruby
+            dockerfile: Dockerfile
         volumes:
-            - ./ruby/root_home/.bash_history:/root/.bash_history
-            - ../lib:/usr/src/ruby-in-docker/lib
-            - ../spec:/usr/src/ruby-in-docker/spec
-            - ../workspace.code-workspace:/usr/src/ruby-in-docker/workspace.code-workspace
-            - ../Gemfile:/usr/src/ruby-in-docker/Gemfile
-            - ../Gemfile.lock:/usr/src/ruby-in-docker/Gemfile.lock
+            - ..:/usr/src/ruby-in-docker/
         stdin_open: true
         tty: true
-        networks:
-            - backend
-
-networks:
-  backend:
-    driver: "bridge"
